<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="intro_view_text">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="name_text_name">Enter your name</string>
    <string name="order_list_text">Order list</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter Note</string>
    <string name="delivery_method_text">Choose a delivery method</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="choose_notification_options">Choose notification options</string>
    <string name="push_notofications_text">Push notofications</string>
    <string name="sms_text">SMS</string>
    <string name="mail_text">Mail</string>
    <string name="phone_call_text">Phone call</string>
    <string name="carrier_pigeon_text">Carrier pigeon</string>
    <string name="show_options_text">Show options</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
